added map icon, and main page names on home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -16,10 +16,19 @@
     <div class="speaker"></div>
     <div class="screen">
       <!-- Content goes here -->
-      <div class="hm hm_map"></div>
-      <div class="hm hm_locations"></div>
-      <div class="hm hm_emergency"></div>
-      <div class="hm hm_settings"></div>
+      <div class="hm hm_map">
+        <label class="hm_lbl">Find Your Child</label>
+        <img src="../images/map_icon_02.png" width="100%" height="60%"/>
+      </div>
+      <div class="hm hm_locations">
+        <label class="hm_lbl">Manage Locations</label>
+      </div>
+      <div class="hm hm_emergency">
+        <label class="hm_lbl">Emergency</label>
+      </div>
+      <div class="hm hm_settings">
+        <label class="hm_lbl">Settings</label>
+      </div>
     </div>
     <div class="home"></div>
     <div class="bottom-bar"></div>
