added 'manage locations' icon

--- a/pages/home.html
+++ b/pages/home.html
@@ -22,6 +22,7 @@
       </div>
       <div class="hm hm_locations">
         <label class="hm_lbl">Manage Locations</label>
+        <img src="../images/manage_locations_02.png" width="100%" height="60%"/>
       </div>
       <div class="hm hm_emergency">
         <label class="hm_lbl">Emergency</label>
