--- a/pages/home.html
+++ b/pages/home.html
@@ -26,9 +26,11 @@
       </div>
       <div class="hm hm_emergency">
         <label class="hm_lbl">Emergency</label>
+        <img src="../images/emergency_02.png" width="100%" height="60%"/>
       </div>
       <div class="hm hm_settings">
         <label class="hm_lbl">Settings</label>
+        <img src="../images/settings_02.png" width="100%" height="60%"/>
       </div>
     </div>
     <div class="home"></div>
