added blue buttons to top banner on template

--- a/pages/template_02.html
+++ b/pages/template_02.html
@@ -15,9 +15,14 @@
     <div class="sensor"></div>
     <div class="speaker"></div>
     <div class="screen">
-      <!-- Content goes here -->
-      <div class="page-banner"></div>
-      <div class="page"></div>
+      <div class="page-banner">
+        <div class="button left"></div>
+        <label>Page Name</label>
+        <div class="button right"></div>
+      </div>
+      <div class="page">
+        <!-- Content goes here -->
+      </div>
     </div>
     <div class="home"></div>
     <div class="bottom-bar"></div>
