top-banner buttons now have images in them

--- a/pages/template_02.html
+++ b/pages/template_02.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
   <link rel="stylesheet" href="../css/style.css" type="text/css">
-  <title>Home</title>
+  <title>Find Your Child App</title>
 </head>
 <body>
   <div class="marvel-device iphone6 silver phone">
@@ -16,9 +16,13 @@
     <div class="speaker"></div>
     <div class="screen">
       <div class="page-banner">
-        <div class="button left"></div>
-        <label>Page Name</label>
-        <div class="button right"></div>
+        <div class="button left">
+          <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
+        </div>
+        <label class="banner">Manage Locations</label>
+        <div class="button right">
+          <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
+        </div>
       </div>
       <div class="page">
         <!-- Content goes here -->
