trying to link buttons now...

--- a/pages/template_02.html
+++ b/pages/template_02.html
@@ -20,9 +20,11 @@
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
         <label class="banner">Manage Locations</label>
-        <div class="button right">
-          <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
-        </div>
+        <a href="http://google.com" style="cursor: pointer;">
+          <span class="button right">
+            <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
+          </span>
+        </a>
       </div>
       <div class="page">
         <!-- Content goes here -->
