--- a/pages/home.html
+++ b/pages/home.html
@@ -2,8 +2,8 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
-  <link rel="stylesheet" href="../css/style.css" type="text/css">
+  <link rel="stylesheet" href="devices.min.css" type="text/css">
+  <link rel="stylesheet" href="style.css" type="text/css">
   <title>Home</title>
 </head>
 <body>
@@ -18,19 +18,19 @@
       <!-- Content goes here -->
       <div class="hm hm_map">
         <label class="hm_lbl">Find Your Child</label>
-        <img src="../images/map_icon_02.png" width="100%" height="60%"/>
+        <img src="map_icon_02.png" width="100%" height="60%"/>
       </div>
       <div class="hm hm_locations">
         <label class="hm_lbl">Manage Locations</label>
-        <img src="../images/manage_locations_02.png" width="100%" height="60%"/>
+        <img src="manage_locations_02.png" width="100%" height="60%"/>
       </div>
       <div class="hm hm_emergency">
         <label class="hm_lbl">Emergency</label>
-        <img src="../images/emergency_02.png" width="100%" height="60%"/>
+        <img src="emergency_02.png" width="100%" height="60%"/>
       </div>
       <div class="hm hm_settings">
         <label class="hm_lbl">Settings</label>
-        <img src="../images/settings_02.png" width="100%" height="60%"/>
+        <img src="settings_02.png" width="100%" height="60%"/>
       </div>
     </div>
     <div class="home"></div>
