--- a/pages/template.html
+++ b/pages/template.html
@@ -16,6 +16,20 @@
     <div class="speaker"></div>
     <div class="screen">
       <!-- Content goes here -->
+      <div class="page-banner">
+        <div class="button left" style="cursor: pointer;" onclick="window.location='home.html';">
+          <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
+        </div>
+        <label class="banner">Manage Locations</label>
+        <a href="home.html" style="cursor: pointer;">
+          <span class="button right">
+            <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
+          </span>
+        </a>
+      </div>
+      <div class="page">
+        <!-- Content goes here -->
+      </div>
     </div>
     <div class="home"></div>
     <div class="bottom-bar"></div>
