--- a/pages/template_02.html
+++ b/pages/template_02.html
@@ -2,8 +2,8 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
-  <link rel="stylesheet" href="../css/style.css" type="text/css">
+  <link rel="stylesheet" href="devices.min.css" type="text/css">
+  <link rel="stylesheet" href="style.css" type="text/css">
   <title>Find Your Child App</title>
 </head>
 <body>
@@ -16,18 +16,19 @@
     <div class="speaker"></div>
     <div class="screen">
       <div class="page-banner">
-        <div class="button left">
-          <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
+        <div class="button left" style="cursor: pointer;" onclick="window.location='http://google.com';">
+          <img src="back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
         <label class="banner">Manage Locations</label>
         <a href="http://google.com" style="cursor: pointer;">
           <span class="button right">
-            <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
+            <img src="home_02.png" width="70%" height="80%" class="banner-icon"/>
           </span>
         </a>
       </div>
       <div class="page">
         <!-- Content goes here -->
+        <a href="home.html">here</a>
       </div>
     </div>
     <div class="home"></div>
