redoing links to be consistent

--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
   <link rel="stylesheet" href="../css/style.css" type="text/css">
-  <title>Home</title>
+  <title>Find Your Child App</title>
 </head>
 <body>
   <div class="marvel-device iphone6 silver phone">
