--- a/pages/template.html
+++ b/pages/template.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
   <link rel="stylesheet" href="../css/style.css" type="text/css">
-  <title>Home</title>
+  <title>Find Your Child App</title>
 </head>
 <body>
   <div class="marvel-device iphone6 silver phone">
@@ -17,15 +17,13 @@
     <div class="screen">
       <!-- Content goes here -->
       <div class="page-banner">
-        <div class="button left" style="cursor: pointer;" onclick="window.location='home.html';">
+        <div class="button left" onclick="window.location='home.html';">
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
         <label class="banner">Manage Locations</label>
-        <a href="home.html" style="cursor: pointer;">
-          <span class="button right">
-            <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
-          </span>
-        </a>
+        <div class="button right" onclick="window.location='home.html';">
+          <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
+        </div>
       </div>
       <div class="page">
         <!-- Content goes here -->
