updated to section title is vertically in the center.

--- a/pages/template.html
+++ b/pages/template.html
@@ -20,7 +20,7 @@
         <div class="button left" onclick="window.location='home.html';">
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
-        <label class="banner">Manage Locations</label>
+        <div class="section-title">Insert Title Here</div>
         <div class="button right" onclick="window.location='home.html';">
           <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
         </div>
