--- a/pages/map.html
+++ b/pages/map.html
@@ -20,14 +20,11 @@
       }
       var map = new google.maps.Map(mapCanvas, mapOptions);
 
-      var kmlUrl = google_kml;
-      var kmlOptions = {
-        suppressInfoWindows: true,
-        preserveViewport: false,
-        map: map
-      };
-      var kmlLayer = new google.maps.KmlLayer(kmlUrl, kmlOptions);
-      console.log(kmlLayer);
+      var marker = new google.maps.Marker({
+        position: {lat: 40.248893, lng: -111.648530},
+        map: map,
+        title: 'You are here.'
+      });
     }
     google.maps.event.addDomListener(window, 'load', initialize);
   </script>
