--- a/pages/map.html
+++ b/pages/map.html
@@ -14,16 +14,41 @@
 
       var mapCanvas = document.getElementById('map');
       var mapOptions = {
-        center: new google.maps.LatLng(40.248893, -111.648530),
+        center: new google.maps.LatLng(40.248679, -111.648513),
         zoom: 15,
+        mapTypeControl: false,
+        streetViewControl: false,
         mapTypeId: google.maps.MapTypeId.ROADMAP
       }
       var map = new google.maps.Map(mapCanvas, mapOptions);
 
       var marker = new google.maps.Marker({
-        position: {lat: 40.248893, lng: -111.648530},
+        position: {lat: 40.248679, lng: -111.648513},
         map: map,
+        label: 'You',
         title: 'You are here.'
+      });
+
+      var child1 = new google.maps.Marker({
+        position: {lat: 40.248660, lng: -111.648803},
+        map: map,
+        label: 'Sally',
+        title: 'Sally.',
+        zIndex: 12
+      });
+
+      var child2 = new google.maps.Marker({
+        position: {lat: 40.251525, lng: -111.647775},
+        map: map,
+        label: 'Billy',
+        title: 'Billy.'
+      });
+
+      var child3 = new google.maps.Marker({
+        position: {lat: 40.248215, lng: -111.620414},
+        map: map,
+        label: 'Fred',
+        title: 'Fred.'
       });
     }
     google.maps.event.addDomListener(window, 'load', initialize);
