adding satellite view

--- a/pages/satellite.html
+++ b/pages/satellite.html
@@ -15,7 +15,7 @@
         zoom: 15,
         mapTypeControl: false,
         streetViewControl: false,
-        mapTypeId: google.maps.MapTypeId.ROADMAP
+        mapTypeId: google.maps.MapTypeId.HYBRID
       }
       var map = new google.maps.Map(mapCanvas, mapOptions);
 
@@ -66,7 +66,7 @@
         <div class="button left" onclick="window.location='home.html';">
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
-        <div class="section-title">Map View</div>
+        <div class="section-title">Satellite View</div>
         <div class="button right" onclick="window.location='home.html';">
           <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
         </div>
