changing map view icon from satellite mode

--- a/pages/satellite.html
+++ b/pages/satellite.html
@@ -75,8 +75,8 @@
         <div id="map" class="map"></div>
         <div class="map-links">
           <div class="map-links-idv">
-            Satellite
-            <img src="../images/satellite_01.png" width="80%" height="80%">
+            Map View
+            <img src="../images/map_icon_01.png" width="80%" height="80%">
           </div>
           <div class="map-links-idv">
             Short Range
