added some links between pages

--- a/pages/map.html
+++ b/pages/map.html
@@ -74,7 +74,7 @@
       <div class="page">
         <div id="map" class="map"></div>
         <div class="map-links">
-          <div class="map-links-idv">
+          <div class="map-links-idv" onclick="window.location='satellite.html';">
             Satellite
             <img src="../images/satellite_01.png" width="80%" height="80%">
           </div>
