--- a/pages/satellite.html
+++ b/pages/satellite.html
@@ -63,7 +63,7 @@
     <div class="screen">
       <!-- Content goes here -->
       <div class="page-banner">
-        <div class="button left" onclick="window.location='home.html';">
+        <div class="button left" onclick="window.location='map.html';">
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
         <div class="section-title">Satellite View</div>
@@ -74,7 +74,7 @@
       <div class="page">
         <div id="map" class="map"></div>
         <div class="map-links">
-          <div class="map-links-idv">
+          <div class="map-links-idv" onclick="window.location='map.html';">
             Map View
             <img src="../images/map_icon_01.png" width="80%" height="80%">
           </div>
