--- a/pages/home.html
+++ b/pages/home.html
@@ -16,8 +16,8 @@
     <div class="speaker"></div>
     <div class="screen">
       <!-- Content goes here -->
-      <div class="hm hm_map">
-        <label class="hm_lbl">Find Your Child</label>
+      <div class="hm hm_map" onclick="window.location='map.html';">
+        <label class="hm_lbl">Map</label>
         <img src="../images/map_icon_02.png" width="100%" height="60%"/>
       </div>
       <div class="hm hm_locations">
