--- a/pages/satellite.html
+++ b/pages/satellite.html
@@ -82,7 +82,7 @@
             Short Range
             <img src="../images/radar_icon_01.png" width="80%" height="80%">
           </div>
-          <div class="map-links-idv">
+          <div class="map-links-idv" onclick="window.location='3D_view.html';">
             3D Mode
             <img src="../images/3D_mode_icon_02.png" width="80%" height="80%">
           </div>
