overlayed radar-effect on short range picture

--- a/pages/short_range.html
+++ b/pages/short_range.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
   <link rel="stylesheet" href="../css/style.css" type="text/css">
+  <link rel="stylesheet" href="../css/radar.css" type="text/css">
   <title>Find Your Child App</title>
 </head>
 <body>
@@ -28,6 +29,18 @@
       <div class="page">
         <div id="map" class="map">
             <img src="../images/shortrange_01.png" width="100%" height="100%">
+            <div id="radar">
+                <div class="beacon" id="beacon"></div>
+                <div class="beacon" id="beacon-75"></div>
+                <div class="beacon" id="beacon-50"></div>
+                <div class="beacon" id="beacon-25"></div>
+                <div class="circle" id="circle-big"></div>
+                <div class="circle" id="circle-medium"></div>
+                <div class="circle" id="circle-small"></div>
+                <div class="circle" id="dot"></div>
+                <div id="vertical"></div>
+                <div id="horizontal"></div>
+            </div>
         </div>
         <div class="map-links">
           <div class="map-links-idv" onclick="window.location='map.html';">
