--- a/pages/short_range.html
+++ b/pages/short_range.html
@@ -6,6 +6,52 @@
   <link rel="stylesheet" href="../css/style.css" type="text/css">
   <link rel="stylesheet" href="../css/radar.css" type="text/css">
   <title>Find Your Child App</title>
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
+  <script>
+    function initialize() {
+      console.info('initializing google maps');
+
+      var mapCanvas = document.getElementById('map');
+      var mapOptions = {
+        center: new google.maps.LatLng(40.248679, -111.648513),
+        zoom: 15,
+        mapTypeControl: false,
+        streetViewControl: false,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+      }
+      var map = new google.maps.Map(mapCanvas, mapOptions);
+
+      var marker = new google.maps.Marker({
+        position: {lat: 40.248679, lng: -111.648513},
+        map: map,
+        label: 'You',
+        title: 'You are here.'
+      });
+
+      var child1 = new google.maps.Marker({
+        position: {lat: 40.248660, lng: -111.648803},
+        map: map,
+        label: 'Sally',
+        title: 'Sally.',
+        zIndex: 12
+      });
+
+      var child2 = new google.maps.Marker({
+        position: {lat: 40.251525, lng: -111.647775},
+        map: map,
+        label: 'Billy',
+        title: 'Billy.'
+      });
+
+      var child3 = new google.maps.Marker({
+        position: {lat: 40.248215, lng: -111.620414},
+        map: map,
+        label: 'Fred',
+        title: 'Fred.'
+      });
+    }
+    google.maps.event.addDomListener(window, 'load', initialize);
+  </script>
 </head>
 <body>
   <div class="marvel-device iphone6 silver phone">
@@ -21,27 +67,28 @@
         <div class="button left" onclick="window.location='map.html';">
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
-        <div class="section-title">Satellite View</div>
+        <div class="section-title">Short Range Mode</div>
         <div class="button right" onclick="window.location='home.html';">
           <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
         </div>
       </div>
-      <div class="page">
+      <div id="page" class="page">
         <div id="map" class="map">
-            <img src="../images/shortrange_01.png" width="100%" height="100%">
-            <div id="radar">
-                <div class="beacon" id="beacon"></div>
-                <div class="beacon" id="beacon-75"></div>
-                <div class="beacon" id="beacon-50"></div>
-                <div class="beacon" id="beacon-25"></div>
-                <div class="circle" id="circle-big"></div>
-                <div class="circle" id="circle-medium"></div>
-                <div class="circle" id="circle-small"></div>
-                <div class="circle" id="dot"></div>
-                <div id="vertical"></div>
-                <div id="horizontal"></div>
-            </div>
+            <!--<img src="../images/shortrange_01.png" width="100%" height="100%">-->
+
         </div>
+          <div id="radar">
+              <div class="beacon" id="beacon"></div>
+              <div class="beacon" id="beacon-75"></div>
+              <div class="beacon" id="beacon-50"></div>
+              <div class="beacon" id="beacon-25"></div>
+              <div class="circle" id="circle-big"></div>
+              <div class="circle" id="circle-medium"></div>
+              <div class="circle" id="circle-small"></div>
+              <div class="circle" id="dot"></div>
+              <div id="vertical"></div>
+              <div id="horizontal"></div>
+          </div>
         <div class="map-links">
           <div class="map-links-idv" onclick="window.location='map.html';">
             Map View
