--- a/pages/short_range.html
+++ b/pages/short_range.html
@@ -13,20 +13,15 @@
 
       var mapCanvas = document.getElementById('map');
       var mapOptions = {
-        center: new google.maps.LatLng(40.248679, -111.648513),
-        zoom: 15,
-        mapTypeControl: false,
-        streetViewControl: false,
+        center: new google.maps.LatLng(40.248663, -111.648641),
+        zoom: 20,
+        disableDefaultUI: true,
+        draggable: false,
+        scrollwheel: false,
         mapTypeId: google.maps.MapTypeId.ROADMAP
       }
       var map = new google.maps.Map(mapCanvas, mapOptions);
 
-      var marker = new google.maps.Marker({
-        position: {lat: 40.248679, lng: -111.648513},
-        map: map,
-        label: 'You',
-        title: 'You are here.'
-      });
 
       var child1 = new google.maps.Marker({
         position: {lat: 40.248660, lng: -111.648803},
