links to short range mode

--- a/pages/3D_view.html
+++ b/pages/3D_view.html
@@ -85,7 +85,7 @@
             Map View
             <img src="../images/map_icon_01.png" width="80%" height="80%">
           </div>
-          <div class="map-links-idv">
+          <div class="map-links-idv" onclick="window.location='short_range.html';">
             Short Range
             <img src="../images/radar_icon_01.png" width="80%" height="80%">
           </div>
