--- a/pages/satellite.html
+++ b/pages/satellite.html
@@ -12,7 +12,8 @@
       var mapCanvas = document.getElementById('map');
       var mapOptions = {
         center: new google.maps.LatLng(40.248679, -111.648513),
-        zoom: 15,
+        zoom: 16,
+        maxZoom: 18,
         mapTypeControl: false,
         streetViewControl: false,
         mapTypeId: google.maps.MapTypeId.HYBRID
@@ -78,7 +79,7 @@
             Map View
             <img src="../images/map_icon_01.png" width="80%" height="80%">
           </div>
-          <div class="map-links-idv">
+          <div class="map-links-idv" onclick="window.location='short_range.html';">
             Short Range
             <img src="../images/radar_icon_01.png" width="80%" height="80%">
           </div>
