made emergency page

--- a/pages/home.html
+++ b/pages/home.html
@@ -24,7 +24,7 @@
         <label class="hm_lbl">Manage Locations</label>
         <img src="../images/manage_locations_02.png" width="100%" height="60%"/>
       </div>
-      <div class="hm hm_emergency">
+      <div class="hm hm_emergency" onclick="window.location='emergency.html';">
         <label class="hm_lbl">Emergency</label>
         <img src="../images/emergency_02.png" width="100%" height="60%"/>
       </div>
