change phone call icon

--- a/pages/emergency.html
+++ b/pages/emergency.html
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="emergency nineoneone ">
-          Call 911
+          Dial 9-1-1
         </div>
         <!-- Content goes here -->
       </div>
