--- a/pages/location.school.html
+++ b/pages/location.school.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
   <link rel="stylesheet" href="../css/style.css" type="text/css">
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxF0Ybvq_1yYSdhzdmbdNUqd6qPgtEkUQ&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
   <script>
     function initialize() {
       console.info('initializing google maps');
@@ -23,21 +23,12 @@
             { "visibility": "on" },
             { "color": "#19ff19" }
           ]
-        },
-        {
-          "featureType": "poi.school",
-          "elementType": "geometry",
-          "stylers": [
-            { "visibility": "on" },
-            { "hue": "#2a00ff" },
-            { "color": "#4580fb" }
-          ]
         }
       ];
 
       var mapCanvas = document.getElementById('map');
       var mapOptions = {
-        center: new google.maps.LatLng(40.255935, -111.644117),
+        center: new google.maps.LatLng(40.247337, -111.641866),
         zoom: 17,
         mapTypeControl: false,
         streetViewControl: false,
@@ -47,26 +38,26 @@
       var map = new google.maps.Map(mapCanvas, mapOptions);
       map.setOptions({styles: styleArray});
 
-      var request = {
-        placeId: 'ChIJFxYmD8iQTYcR_xeyewIapt0'
-      };
+      // Define the LatLng coordinates for the polygon's path.
+      var locCoords = [
+        {lat: 40.24849322221511, lng: -111.64301812648773},
+        {lat: 40.24846865587563, lng: -111.64067924022675},
+        {lat: 40.24610205670234, lng: -111.64065778255463},
+        {lat: 40.246151191090306, lng: -111.64200961589813},
+        {lat: 40.24706835978569, lng: -111.64199888706207},
+        {lat: 40.24706835978569, lng: -111.64309322834015}
+      ];
 
-      service = new google.maps.places.PlacesService(map);
-      service.getDetails(request, callback);
-
-      function callback(place, status) {
-        if (status == google.maps.places.PlacesServiceStatus.OK) {
-          console.log('place', place);
-          console.log('bounds', map.getBounds());
-          console.log('map', map);
-          console.log('data', map.data);
-          features = [];
-          map.data.forEach(function(feature) {
-            console.log(feature);
-          });
-        }
-      }
-
+      // Construct the polygon.
+      var location = new google.maps.Polygon({
+        paths: locCoords,
+        strokeColor: '#FF0000',
+        strokeOpacity: 0.8,
+        strokeWeight: 2,
+        fillColor: '#FF0000',
+        fillOpacity: 0.15
+      });
+      location.setMap(map);
 
       var marker = new google.maps.Marker({
         position: {lat: 40.248679, lng: -111.648513},
@@ -102,44 +93,44 @@
   <title>Find Your Child App</title>
 </head>
 <body>
-  <div class="marvel-device iphone6 silver phone">
-    <div class="top-bar"></div>
-    <div class="sleep"></div>
-    <div class="volume"></div>
-    <div class="camera"></div>
-    <div class="sensor"></div>
-    <div class="speaker"></div>
-    <div class="screen">
-      <!-- Content goes here -->
-      <div class="page-banner">
-        <div class="button left" onclick="window.location='home.html';">
-          <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
-        </div>
-        <div class="section-title">Map View</div>
-        <div class="button right" onclick="window.location='home.html';">
-          <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
-        </div>
+<div class="marvel-device iphone6 silver phone">
+  <div class="top-bar"></div>
+  <div class="sleep"></div>
+  <div class="volume"></div>
+  <div class="camera"></div>
+  <div class="sensor"></div>
+  <div class="speaker"></div>
+  <div class="screen">
+    <!-- Content goes here -->
+    <div class="page-banner">
+      <div class="button left" onclick="window.location='home.html';">
+        <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
       </div>
-      <div class="page">
-        <div id="map" class="map"></div>
-        <div class="map-links">
-          <div class="map-links-idv" onclick="window.location='satellite.html';">
-            Satellite
-            <img src="../images/satellite_01.png" width="80%" height="80%">
-          </div>
-          <div class="map-links-idv" onclick="window.location='short_range.html';">
-            Short Range
-            <img src="../images/radar_icon_01.png" width="80%" height="80%">
-          </div>
-          <div class="map-links-idv" onclick="window.location='3D_view.html';">
-            3D Mode
-            <img src="../images/3D_mode_icon_02.png" width="80%" height="80%">
-          </div>
+      <div class="section-title">Map View</div>
+      <div class="button right" onclick="window.location='home.html';">
+        <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
+      </div>
+    </div>
+    <div class="page">
+      <div id="map" class="map"></div>
+      <div class="map-links">
+        <div class="map-links-idv" onclick="window.location='satellite.html';">
+          Satellite
+          <img src="../images/satellite_01.png" width="80%" height="80%">
+        </div>
+        <div class="map-links-idv" onclick="window.location='short_range.html';">
+          Short Range
+          <img src="../images/radar_icon_01.png" width="80%" height="80%">
+        </div>
+        <div class="map-links-idv" onclick="window.location='3D_view.html';">
+          3D Mode
+          <img src="../images/3D_mode_icon_02.png" width="80%" height="80%">
         </div>
       </div>
     </div>
-    <div class="home"></div>
-    <div class="bottom-bar"></div>
   </div>
+  <div class="home"></div>
+  <div class="bottom-bar"></div>
+</div>
 </body>
 </html>
