--- a/pages/location.school.html
+++ b/pages/location.school.html
@@ -103,10 +103,10 @@
   <div class="screen">
     <!-- Content goes here -->
     <div class="page-banner">
-      <div class="button left" onclick="window.location='home.html';">
+      <div class="button left" onclick="window.location='locations.html';">
         <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
       </div>
-      <div class="section-title">Map View</div>
+      <div class="section-title">School</div>
       <div class="button right" onclick="window.location='home.html';">
         <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
       </div>
