--- a/pages/home.html
+++ b/pages/home.html
@@ -20,7 +20,7 @@
         <label class="hm_lbl">Map</label>
         <img src="../images/map_icon_02.png" width="100%" height="60%"/>
       </div>
-      <div class="hm hm_locations">
+      <div class="hm hm_locations" onclick="window.location='locations.html';">
         <label class="hm_lbl">Manage Locations</label>
         <img src="../images/manage_locations_02.png" width="100%" height="60%"/>
       </div>
