--- a/pages/location.park.html
+++ b/pages/location.park.html
@@ -55,10 +55,10 @@
       // Construct the polygon.
       var park = new google.maps.Polygon({
         paths: locCoords,
-        strokeColor: '#FF0000',
+        strokeColor: '#0000FF',
         strokeOpacity: 0.8,
         strokeWeight: 2,
-        fillColor: '#FF0000',
+        fillColor: '#0000FF',
         fillOpacity: 0.15
       });
       park.setMap(map);
