--- a/pages/location.school.html
+++ b/pages/location.school.html
@@ -51,10 +51,10 @@
       // Construct the polygon.
       var location = new google.maps.Polygon({
         paths: locCoords,
-        strokeColor: '#FF0000',
+        strokeColor: '#0000FF',
         strokeOpacity: 0.8,
         strokeWeight: 2,
-        fillColor: '#FF0000',
+        fillColor: '#0000FF',
         fillOpacity: 0.15
       });
       location.setMap(map);
