--- a/pages/locations.html
+++ b/pages/locations.html
@@ -27,6 +27,24 @@
       </div>
       <div class="page">
         <!-- Content goes here -->
+        <div class="location">
+          <div class="loc_name">Home</div>
+        </div>
+        <div class="location">
+          <div class="loc_name">School</div>
+        </div>
+        <div class="location">
+          <div class="loc_name">High<br/>  School</div>
+        </div>
+        <div class="location">
+          <div class="loc_name">Park</div>
+        </div>
+        <div class="location">
+          <div class="loc_name">Cemetery</div>
+        </div>
+        <div class="location">
+          <div class="loc_name">Piano<br/>  Lessons</div>
+        </div>
       </div>
     </div>
     <div class="home"></div>
