--- a/pages/locations.html
+++ b/pages/locations.html
@@ -29,21 +29,27 @@
         <!-- Content goes here -->
         <div class="location">
           <div class="loc_name">Home</div>
+          <div  class="loc_map" onclick="window.location='location.home.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
         </div>
         <div class="location">
           <div class="loc_name">School</div>
+          <div  class="loc_map" onclick="window.location='location.school.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
         </div>
         <div class="location">
           <div class="loc_name">High<br/>  School</div>
+          <div  class="loc_map" onclick="window.location='location.highschool.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
         </div>
         <div class="location">
           <div class="loc_name">Park</div>
+          <div  class="loc_map" onclick="window.location='location.park.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
         </div>
         <div class="location">
           <div class="loc_name">Cemetery</div>
+          <div  class="loc_map" onclick="window.location='location.cemetery.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
         </div>
         <div class="location">
           <div class="loc_name">Piano<br/>  Lessons</div>
+          <div  class="loc_map" onclick="window.location='location.piano_lessons.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
         </div>
       </div>
     </div>
