--- a/pages/locations.html
+++ b/pages/locations.html
@@ -27,11 +27,12 @@
       </div>
       <div class="page">
         <!-- Content goes here -->
+        <div class="location-header">Locations:</div>
         <div class="location">
           <div class="loc_name">Home</div>
           <div  class="loc_map" onclick="window.location='location.home.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
         </div>
-        <div class="location">
+        <div class="location alt">
           <div class="loc_name">School</div>
           <div  class="loc_map" onclick="window.location='location.school.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
         </div>
@@ -39,7 +40,7 @@
           <div class="loc_name">High<br/>  School</div>
           <div  class="loc_map" onclick="window.location='location.highschool.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
         </div>
-        <div class="location">
+        <div class="location alt">
           <div class="loc_name">Park</div>
           <div  class="loc_map" onclick="window.location='location.park.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
         </div>
@@ -47,7 +48,7 @@
           <div class="loc_name">Cemetery</div>
           <div  class="loc_map" onclick="window.location='location.cemetery.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
         </div>
-        <div class="location">
+        <div class="location alt">
           <div class="loc_name">Piano<br/>  Lessons</div>
           <div  class="loc_map" onclick="window.location='location.piano_lessons.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
         </div>
