created basic table header

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -28,6 +28,10 @@
       <div class="page">
         <!-- Content goes here -->
         <div class="location-header">Locations:</div>
+        <div class="table-header">
+          <div class="table-header-row">Name</div>
+          <div class="table-header-row">Map</div>
+        </div>
         <div class="location">
           <div class="loc_name">Home</div>
           <div  class="loc_map" onclick="window.location='location.home.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
