added approval column in location table

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -32,31 +32,43 @@
           <div class="table-header-row">Name</div>
           <div class="table-header-row">Map</div>
           <div class="table-header-row">Edit</div>
+          <div class="table-header-row">Approved?</div>
         </div>
         <div class="location">
           <div class="loc_name">Home</div>
           <div  class="loc_map" onclick="window.location='location.home.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
           <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
+          <div class="loc_approved"><img class="loc-center" src="../images/check_01.png" width="40%" height="40%"/></div>
         </div>
         <div class="location alt">
           <div class="loc_name">School</div>
           <div  class="loc_map" onclick="window.location='location.school.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
+          <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
+          <div class="loc_approved"><img class="loc-center" src="../images/check_01.png" width="40%" height="40%"/></div>
         </div>
         <div class="location">
           <div class="loc_name">High<br/>  School</div>
           <div  class="loc_map" onclick="window.location='location.highschool.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
+          <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
+          <div class="loc_approved"><img class="loc-center" src="../images/check_01.png" width="40%" height="40%"/></div>
         </div>
         <div class="location alt">
           <div class="loc_name">Park</div>
           <div  class="loc_map" onclick="window.location='location.park.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
+          <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
+          <div class="loc_approved"><img class="loc-center" src="../images/check_01.png" width="40%" height="40%"/></div>
         </div>
         <div class="location">
           <div class="loc_name">Cemetery</div>
           <div  class="loc_map" onclick="window.location='location.cemetery.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
+          <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
+          <div class="loc_approved"><img class="loc-center" src="../images/x_icon_02.png" width="40%" height="40%"/></div>
         </div>
         <div class="location alt">
           <div class="loc_name">Piano<br/>  Lessons</div>
           <div  class="loc_map" onclick="window.location='location.piano_lessons.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
+          <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
+          <div class="loc_approved"><img class="loc-center" src="../images/check_01.png" width="40%" height="40%"/></div>
         </div>
       </div>
     </div>
