--- a/pages/locations.html
+++ b/pages/locations.html
@@ -44,13 +44,13 @@
           <div class="loc_name">School</div>
           <div  class="loc_map" onclick="window.location='location.school.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
           <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
-          <div class="loc_approved"><img class="loc-center" src="../images/check_01.png" width="40%" height="40%"/></div>
+          <div class="loc_approved">7:00am - 3:00pm</div>
         </div>
         <div class="location">
           <div class="loc_name">High<br/>  School</div>
           <div  class="loc_map" onclick="window.location='location.highschool.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
           <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
-          <div class="loc_approved"><img class="loc-center" src="../images/check_01.png" width="40%" height="40%"/></div>
+          <div class="loc_approved">8:00am - 4:00pm</div>
         </div>
         <div class="location alt">
           <div class="loc_name">Park</div>
@@ -68,7 +68,7 @@
           <div class="loc_name">Piano<br/>  Lessons</div>
           <div  class="loc_map" onclick="window.location='location.piano_lessons.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
           <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
-          <div class="loc_approved"><img class="loc-center" src="../images/check_01.png" width="40%" height="40%"/></div>
+          <div class="loc_approved">12:00pm - 1:30pm</div>
         </div>
       </div>
     </div>
