Changed some styling for the locations page and top bar
Change the top bar to only be a sing color.  I did this because I think
it looks better as is.  I also changed the location bars removing the
borders and seperating them slightly.  again just to make it look
better.

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -27,7 +27,7 @@
       </div>
       <div class="page">
         <!-- Content goes here -->
-        <div class="location-header">Locations:</div>
+       <!-- <div class="location-header">Locations:</div>-->
         <div class="table-header">
           <div class="table-header-row">Name</div>
           <div class="table-header-row">Map</div>
