added link to new settings button
added link to new settings button

--- a/pages/home.html
+++ b/pages/home.html
@@ -28,7 +28,7 @@
         <label class="hm_lbl">Emergency</label>
         <img src="../images/emergency_02.png" width="100%" height="60%"/>
       </div>
-      <div class="hm hm_settings">
+      <div class="hm hm_settings" onclick="window.location='settings.html';">
         <label class="hm_lbl">Settings</label>
         <img src="../images/settings_02.png" width="100%" height="60%"/>
       </div>
