Not working yet. Ugh.

--- a/pages/add_location.html
+++ b/pages/add_location.html
@@ -41,6 +41,7 @@
         center: new google.maps.LatLng(40.255935, -111.644117),
         zoom: 17,
         streetViewControl: false,
+		mapTypeControl: false,
         styles: styleArray,
         mapTypeId: google.maps.MapTypeId.ROADMAP
       }
