added styling for setting page
if you are creating a navigation page use the navigation and nav-text
classes for the boxes and text

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -28,22 +28,11 @@
       <div class="page">
         <!-- Content goes here -->
         <div class="navigation">
-          <div class="nav-text">Home</div>
+          <div class="nav-text">Device Management</div>
         </div>
         <div class="navigation">
-          <div class="nav-text"></div>
+          <div class="nav-text">Preferences</div>
         </div>
-        <div class="navigation">
-          <div class="nav-text"></div>
-        </div>
-        <div class="location alt">
-          <div class="loc_name">Park</div>
-        </div>
-        <div class="location">
-          <div class="loc_name">Cemetery</div>
-        </div>
-        <div class="location alt">
-          <div class="loc_approved"></div>
         </div>
       </div>
     </div>
