--- a/pages/home.html
+++ b/pages/home.html
@@ -17,7 +17,7 @@
     <div class="screen">
       <!-- Content goes here -->
       <div class="hm hm_map" onclick="window.location='map.html';">
-        <label class="hm_lbl">Map</label>
+        <label class="hm_lbl">Find My Child</label>
         <img src="../images/map_icon_02.png" width="100%" height="60%"/>
       </div>
       <div class="hm hm_locations" onclick="window.location='locations.html';">
