finished emergency menu by adding information screen and phone call screen

--- a/pages/emergency.html
+++ b/pages/emergency.html
@@ -26,25 +26,25 @@
         </div>
       </div>
       <div class="page">
-        <div class="emergency hospitals">
+        <div class="emergency hospitals" onclick="window.location='medical_center.html';">
           Utah Valley Regional Medical Center
         </div>
         <div class="emergency contact">
-          <img src="../images/phone_circle.png" height="60px" width="60px">
-          <div class="hospitals directions">
+          <img src="../images/phone_circle.png" height="60px" width="60px" onclick="window.location='phone_call_medical_center.html';">
+          <div class="hospitals directions" onclick="window.location='medical_center_direction.html';">
             Get Directions  
           </div>
         </div>
-        <div class="emergency hospitals">
+        <div class="emergency hospitals" onclick="window.location='pediatrics.html';">
           Utah Valley Pediatrics
         </div>
         <div class="emergency contact">
-          <img src="../images/phone_circle.png" height="60px" width="60px">
-          <div class="hospitals directions">
+          <img src="../images/phone_circle.png" height="60px" width="60px" onclick="window.location='phone_call_pediatrics.html';">
+          <div class="hospitals directions" onclick="window.location='pediatrics_direction.html';">
             Get Directions  
           </div>
         </div>
-        <div class="emergency nineoneone ">
+        <div class="emergency nineoneone" onclick="window.location='phone_call_emergency.html';">
           Dial 9-1-1
         </div>
         <!-- Content goes here -->
