added functionality to devices page
made it so you can add and remove devices.  this will only last as long
as you are on the page.  there is no permanence at all.

--- a/pages/devices.html
+++ b/pages/devices.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
   <link rel="stylesheet" href="../css/style.css" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <title>Find Your Child App</title>
 </head>
 <body>
@@ -20,27 +21,38 @@
         <div class="button left" onclick="window.location='home.html';">
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
-        <div class="section-title">Settings</div>
+        <div class="section-title">Manage Devices</div>
         <div class="button right" onclick="window.location='home.html';">
           <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
         </div>
       </div>
       <div class="page">
         <!-- Content goes here -->
-        <div class="navigation" onclick="window.location='devices.html'">
-          <div class="nav-text">Device Management</div>
+       <!-- <div class="location-header">Locations:</div>-->
+       <!-- <div class="table-header">
+          <div class="table-header-row">Name</div>
+          <div class="table-header-row">Map</div>
+          <div class="table-header-row">Edit</div>
+          <div class="table-header-row">Approved?</div>
+        </div>-->
+        <div class="location alt">
+          <div class="loc_name">Tom</div>
+          <div class=""><img class="removed" src="../images/x_icon_02.png" width="15%" height="15%"/></div>
         </div>
-        <div class="navigation" onclick="">
-          <div class="nav-text">System Preferences</div>
+        <div class="location alt">
+          <div class="loc_name">Billy</div>
+          <div class="d"><img class="removed" src="../images/x_icon_02.png" width="15%" height="15%"/></div>
         </div>
-        <div class="navigation" onclick="">
-          <div class="nav-text">Notification Settings</div>
+        <div class="add-d">
+          <div class="add-device">Add Device</div>
         </div>
-        </div>
+
       </div>
     </div>
     <div class="home"></div>
     <div class="bottom-bar"></div>
   </div>
+  <script type="text/javascript" src="../script.js"></script>
 </body>
+
 </html>
