linking to preferences from settings

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -27,11 +27,11 @@
       </div>
       <div class="page">
         <!-- Content goes here -->
-        <div class="navigation">
-          <div class="nav-text">Device Management</div>
+        <div class="emergency hospitals">
+          Device Management
         </div>
-        <div class="navigation">
-          <div class="nav-text">Preferences</div>
+        <div class="emergency hospitals" onclick="window.location='preferences.html';">
+          Preferences
         </div>
         </div>
       </div>
