linking and styling battery saver page

--- a/pages/preferences.html
+++ b/pages/preferences.html
@@ -30,7 +30,7 @@
           <div class="emergency hospitals" onclick="window.location='medical_center.html';">
               Notification Settings
           </div>
-          <div class="emergency hospitals" onclick="window.location='medical_center.html';">
+          <div class="emergency hospitals" onclick="window.location='battery_saver.html';">
               Battery Saver
           </div>
       </div>
