--- a/pages/battery_saver.html
+++ b/pages/battery_saver.html
@@ -28,9 +28,9 @@
       </div>
       <div class="page">
         <!-- Content goes here -->
-          <div class="emergency hospitals">
+          <div class="options-bar">
               Battery Saver Mode
-              <div class="onoffswitch">
+              <div class="onoffswitch options-bar-option">
                   <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
                   <label class="onoffswitch-label" for="myonoffswitch">
                       <span class="onoffswitch-inner"></span>
