adding notification settings page

--- a/pages/preferences.html
+++ b/pages/preferences.html
@@ -27,7 +27,7 @@
       </div>
       <div class="page">
         <!-- Content goes here -->
-          <div class="emergency hospitals" onclick="window.location='medical_center.html';">
+          <div class="emergency hospitals" onclick="window.location='notification_settings.html';">
               Notification Settings
           </div>
           <div class="emergency hospitals" onclick="window.location='battery_saver.html';">
