fixed on/off switches in notification settings

--- a/pages/notification_settings.html
+++ b/pages/notification_settings.html
@@ -31,8 +31,8 @@
           <div class="options-bar">
               Child Enters Unapproved Location
               <div class="onoffswitch options-bar-option">
-                  <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
-                  <label class="onoffswitch-label" for="myonoffswitch">
+                  <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="enter_unapproved" checked>
+                  <label class="onoffswitch-label" for="enter_unapproved">
                       <span class="onoffswitch-inner"></span>
                       <span class="onoffswitch-switch"></span>
                   </label>
@@ -41,8 +41,8 @@
           <div class="options-bar">
               Child Not In Approved Location
               <div class="onoffswitch options-bar-option">
-                  <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
-                  <label class="onoffswitch-label" for="myonoffswitch">
+                  <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox"  id="neutral" checked>
+                  <label class="onoffswitch-label" for="neutral">
                       <span class="onoffswitch-inner"></span>
                       <span class="onoffswitch-switch"></span>
                   </label>
@@ -51,8 +51,8 @@
           <div class="options-bar">
               Child In Unknown Location
               <div class="onoffswitch options-bar-option">
-                  <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
-                  <label class="onoffswitch-label" for="myonoffswitch">
+                  <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox"  id="unknown_location" checked>
+                  <label class="onoffswitch-label" for="unknown_location">
                       <span class="onoffswitch-inner"></span>
                       <span class="onoffswitch-switch"></span>
                   </label>
