added jquery session script

--- a/pages/home.html
+++ b/pages/home.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
   <link rel="stylesheet" href="../css/style.css" type="text/css">
+  <script src="../js/jquery.session.js"></script>
   <title>Find Your Child App</title>
 </head>
 <body>
+<script>
+    console.log('hello world');
+</script>
   <div class="marvel-device iphone6 silver phone">
     <div class="top-bar"></div>
     <div class="sleep"></div>
