--- a/pages/home.html
+++ b/pages/home.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
   <link rel="stylesheet" href="../css/style.css" type="text/css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="../js/jquery.session.js"></script>
   <title>Find Your Child App</title>
 </head>
 <body>
 <script>
-    console.log('hello world');
+    $.session.set('hello', 'goodbye world');
+    console.log($.session.get('hello'));
 </script>
   <div class="marvel-device iphone6 silver phone">
     <div class="top-bar"></div>
