--- a/pages/home.html
+++ b/pages/home.html
@@ -10,8 +10,17 @@
 </head>
 <body>
 <script>
+    var home_poly = [
+        {lat: 40.258338488417536, lng: -111.64219871163368},
+        {lat: 40.258256612497064, lng: -111.64193585515022},
+        {lat: 40.25814607984728, lng: -111.64199218153954},
+        {lat: 40.25823614350147, lng: -111.64226040244102}
+      ];
+    console.log(home_poly);
+    $.session.set('loc_home', home_poly);
     $.session.set('hello', 'goodbye world');
     console.log($.session.get('hello'));
+    console.log($.session.get('loc_home'));
 </script>
   <div class="marvel-device iphone6 silver phone">
     <div class="top-bar"></div>
