--- a/pages/home_init.html
+++ b/pages/home_init.html
@@ -9,6 +9,16 @@
   <title>Find Your Child App</title>
 </head>
 <body>
+<script>
+    var home_poly = [
+        {lat: 40.258338488417536, lng: -111.64219871163368},
+        {lat: 40.258256612497064, lng: -111.64193585515022},
+        {lat: 40.25814607984728, lng: -111.64199218153954},
+        {lat: 40.25823614350147, lng: -111.64226040244102}
+      ];
+    $.session.set('loc_home', home_poly);
+    console.log($.session.get('loc_home'));
+</script>
   <div class="marvel-device iphone6 silver phone">
     <div class="top-bar"></div>
     <div class="sleep"></div>
